Get basic networking sandbox working

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,5 @@ jobs:
         with:
           action: dhadka/print-env
           token: ${{ secrets.PAT }}
+          sandbox: |
+            network: none
