--- a/action.yml
+++ b/action.yml
@@ -20,4 +20,6 @@ inputs:
     description: 'Run action in a sandbox with restricted network and file access'
 runs:
   using: 'node12'
-  main: 'dist/index.js'
+  main: 'dist/main/index.js'
+  post: 'dist/post/index.js'
+  post-if: always()
