--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,8 @@ inputs:
     description: 'Run action in a sandbox with restricted network and file access'
 runs:
   using: 'node12'
+  pre: 'dist/pre/index.js'
+  pre-if: always()
   main: 'dist/main/index.js'
   post: 'dist/post/index.js'
   post-if: always()
