--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,20 @@ jobs:
   #        npm install
   #    - run: |
   #        npm run all
-  test-pat:
+  test-no-pat:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: ./
         with:
           action: dhadka/print-env
+  test-pat:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./
+        with:
+          action: dhadka/malicious-action
           token: ${{ secrets.PAT }}
   test-sudo:
     runs-on: ubuntu-latest
