--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,13 +38,14 @@ jobs:
         with:
           action: dhadka/print-env
           sudo: true
-  test-network-sandbox:
+  test-network-none:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: ./
         with:
           action: dhadka/malicious-action
+          token: ${{ secrets.PAT }}
           network: none
   test-filesystem-readonly:
     runs-on: ubuntu-latest
@@ -53,6 +54,7 @@ jobs:
       - uses: ./
         with:
           action: dhadka/malicious-action
+          token: ${{ secrets.PAT }}
           fileSystem: read-only
       - run: ls -al
   test-filesystem-overlay:
@@ -62,6 +64,7 @@ jobs:
       - uses: ./
         with:
           action: dhadka/malicious-action
+          token: ${{ secrets.PAT }}
           fileSystem: overlay
       - run: ls -al
   test-filesystem-private:
