--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,12 +62,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: echo "hello world!" > foo
       - uses: ./
         with:
           action: dhadka/malicious-action
           token: ${{ secrets.PAT }}
           fileSystem: overlay
-      - run: ls -al
+      - run: cat foo
   test-filesystem-private:
     runs-on: ubuntu-latest
     steps:
