--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,7 +69,7 @@ jobs:
           token: ${{ secrets.PAT }}
           fileSystem: overlay
       - run: cat foo
-  test-filesystem-private:
+  test-filesystem-none:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -77,7 +77,7 @@ jobs:
         with:
           action: dhadka/malicious-action
           token: ${{ secrets.PAT }}
-          fileSystem: private
+          fileSystem: none
       - run: ls -al
   test-args:
     runs-on: ubuntu-latest
